test/files/invalid/array_in_table.stderr
error: Unsupported type
  ┌─ test/files/invalid/array_in_table.fbs:2:6
  │
2 │   x: [bool: 3];
  │      ^^^^^^^^^ Arrays in tables are not supported

